--- a/app/styles/ember-fountainhead/base/_utils.scss
+++ b/app/styles/ember-fountainhead/base/_utils.scss
@@ -30,7 +30,7 @@ li[role="presentation"] {
 
 // Link Buttons
 // ---------------------------------------------------------------------------
-.btn-link {
+button.btn-link {
   font-weight: normal;
   color: $link-color;
   border-radius: 0;
