--- a/app/styles/ember-fountainhead/components/_footer.scss
+++ b/app/styles/ember-fountainhead/components/_footer.scss
@@ -1,7 +1,8 @@
-// Footer Styles
-// =============================================
+// ========================================================
+// Addon Footer Styles
+// ========================================================
 
-.fh-footer {
+.fh-addon-footer {
   background: $primary;
   padding: 50px 5rem;
 
