--- a/app/styles/ember-fountainhead/base/_code-blocks.scss
+++ b/app/styles/ember-fountainhead/base/_code-blocks.scss
@@ -5,13 +5,13 @@
 .fh-page-in-page-wrapper {
   code {
     color: $code-color;
-    padding: .2rem .5rem;
+    padding: 2px 4px;
     margin: 0 .2rem;
     font-size: 90%;
     white-space: nowrap;
     background-color: $code-bg;
     border: $code-border;
-    border-radius: 4px;
+    border-radius: $radius;
     white-space: nowrap;
     font-family: $font-family-mono;
     -webkit-font-smoothing: antialiased;
@@ -27,7 +27,7 @@
     padding: 1rem 1.5rem;
     border: $block-code-border;
     background-color: $block-code-bg;
-    border-radius: 4px;
+    border-radius: $radius;
     overflow: auto;
 
     & > code {
