--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -9,7 +9,6 @@
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid $border-color;
-    color: $gray-1;
   }
 
   // Use this header for Fountainhead created headers like `classes && namespaces`
@@ -19,9 +18,36 @@
   }
 }
 
+// Description styles are toned down for easier reading
 .fh-description {
   h1 { font-size: 32px; }
   h2 { font-size: 24px; }
   h3 { font-size: 18px; }
   h4 { font-size: 18px; }
+
+  ul {
+    list-style: circle;
+    line-height: 1.3;
+
+    li {
+      margin-bottom: 4px;
+    }
+  }
 }
+
+// Use to make badges for contextual information
+.fh-info,
+.fh-success,
+.fh-alert {
+  color: $white;
+  border: 1px solid $border-color;
+  padding: 3px 5px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: $radius;
+  display: inline-block;
+}
+
+.fh-success { background-color: $success; }
+.fh-alert { background-color: $alert; }
+.fh-info { background-color: $primary }
