--- a/app/styles/ember-fountainhead/components/_header.scss
+++ b/app/styles/ember-fountainhead/components/_header.scss
@@ -1,9 +1,10 @@
-// Header
-// =============================================
+// ========================================================
+// Addon Header Styles
+// ========================================================
 
-.fh-header {
+.fh-addon-header {
   display: flex;
-  background: $dark-gray;
+  background: $onyx;
   color: $white;
   padding: 1rem 5rem;
   margin-bottom: 50px;
