--- a/app/styles/ember-fountainhead/components/class/_meta.scss
+++ b/app/styles/ember-fountainhead/components/class/_meta.scss
@@ -1,3 +1,7 @@
+// ========================================================
+// Class Meta Styles
+// ========================================================
+
 /*
  * Meta attributes in fountainhead aren't as in your face. This data typically
  * isn't what you really want to know, so there's no reason for it to grab your
@@ -5,11 +9,10 @@
  * documentation.
  */
 
-// extends && defined wrapper
 .fh-class-meta {
-  margin-bottom: 2rem;
+  margin-bottom: 40px;
 
-  p {
+  .fh-meta {
     line-height: 1;
     margin-bottom: 1px;
   }
@@ -20,25 +23,9 @@
   .meta-uses,
   .meta-module {
     text-transform: uppercase;
-    color: $gray-3; // TODO: this isn't available in fountainhead!
+    color: $rhino;
   }
 
-  .meta-access {
-    .public { color: $success; }
-    .private { color: $alert; }
-  }
+  .fh-public { color: $success; }
+  .fh-private { color: $alert; }
 }
-
-// constructor wrapper
-// .fountain-constructor {
-//   margin-bottom: 3rem;
-//
-//   .constructor-title,
-//   .method-signature {
-//     font-weight: 300;
-//   }
-//
-//   .method-signature {
-//     margin-bottom: 0;
-//   }
-// }
