--- a/app/styles/ember-fountainhead/prism/_prism-panda.scss
+++ b/app/styles/ember-fountainhead/prism/_prism-panda.scss
@@ -74,7 +74,7 @@ pre[class*="language-"] {
 /* Inline code */
 :not(pre) > code[class*="language-"] {
 	padding: .1em;
-	border-radius: .3em;
+	border-radius: $radius;
 	white-space: normal;
 }
 
