--- a/app/styles/ember-fountainhead/base/_code-blocks.scss
+++ b/app/styles/ember-fountainhead/base/_code-blocks.scss
@@ -17,9 +17,15 @@
     -webkit-font-smoothing: antialiased;
   }
 
+  // Addon styles for regular and prism blocks
   pre,
   pre[class*="language-"] {
     margin-bottom: 22px;
+
+    & > code {
+      margin: 0;
+      padding: 0;
+    }
   }
 
   // Do not interfer with PrismJS styles
@@ -36,6 +42,7 @@
       color: inherit;
       display: block;
       font-size: 80%;
+      padding: 0;
       white-space: pre;
     }
   }
