--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -20,21 +20,33 @@
     font-weight: normal;
   }
 
+  // sidebar ul
   .item-group {
     list-style: none;
-    padding-right: 30px;
+    padding: 0;
     margin-top: 5px;
   }
 
+  // sidebar ul li
   .item-group-item {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    padding: 4px 0 4px;
+    padding: 0;
+    margin: 0;
   }
 
-  .item-link.active {
-    font-weight: bold;
-    text-decoration: underline;
+  // sidebar ul li a
+  .item-link {
+    display: block;
+    padding: 4px 20px;
+
+    &.active {
+      background-color: $ash;
+    }
+
+    &:focus {
+      text-decoration: none;
+    }
   }
 }
