--- a/app/styles/ember-fountainhead/themes/_simple.scss
+++ b/app/styles/ember-fountainhead/themes/_simple.scss
@@ -40,6 +40,7 @@ $charcoal: #4B4B4B;
 $battleship: #6d6964;
 $rhino: #7A8288;
 $argent: #c2bfbd;
+$ash: rgba(224, 224, 224, 0.65);
 $smoke: #f1f1f1;
 
 // Branding
