Making everything look awesome

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -16,6 +16,7 @@
 // Radical Styles
 // ---------------------------------------------------------------------------
 @import 'ember-fountainhead/ember-radical/tabs';
+@import 'ember-fountainhead/ember-radical/svg';
 
 // Fountainhead Components
 // ---------------------------------------------------------------------------
