--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -20,6 +20,8 @@
 
 // Description styles are toned down for easier reading
 .fh-description {
+  margin-bottom: 20px;
+
   h1 { font-size: 32px; }
   h2 { font-size: 24px; }
   h3 { font-size: 18px; }
