--- a/app/styles/ember-fountainhead/components/_footer.scss
+++ b/app/styles/ember-fountainhead/components/_footer.scss
@@ -4,9 +4,10 @@
 
 .fh-addon-footer {
   background: $primary;
-  padding: 50px 5rem;
+  padding: 25px 5rem;
 
   p {
     color: $white;
+    margin-bottom: 0;
   }
 }
