--- a/app/styles/ember-fountainhead/components/_header.scss
+++ b/app/styles/ember-fountainhead/components/_header.scss
@@ -4,9 +4,9 @@
 
 .fh-addon-header {
   display: flex;
-  background: $onyx;
+  background: $primary;
   color: $white;
-  padding: 1rem 5rem;
+  padding: 0.75rem 5rem;
   margin-bottom: 50px;
   justify-content: space-between;
   align-items: center;
@@ -16,7 +16,7 @@
   }
 
   .docs-logo {
-    max-height: 50px;
+    max-height: 40px;
   }
 
   .docs-github-link {
@@ -28,6 +28,7 @@
 
     svg {
       fill: currentColor;
+      vertical-align: middle;
     }
   }
 }
