--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -8,12 +8,13 @@
   margin-left: 50px;
   border-left: 1px solid $border-color;
   border-right: 1px solid $border-color;
+  border-top: 1px solid $border-color;
 
   .section-header {
+    margin: 0 0 -1px;
     padding: 12px 12px 10px 12px;
     border-top: 1px solid $border-color;
     border-bottom: 1px solid $border-color;
-    margin-bottom: 0;
     text-align: center;
     text-transform: uppercase;
     font-size: 14px;
@@ -24,7 +25,7 @@
   .item-group {
     list-style: none;
     padding: 0;
-    margin-top: 5px;
+    margin: 15px 0;
   }
 
   // sidebar ul li
