--- a/app/styles/ember-fountainhead/themes/_simple.scss
+++ b/app/styles/ember-fountainhead/themes/_simple.scss
@@ -44,7 +44,8 @@ $ash: rgba(224, 224, 224, 0.65);
 $smoke: #f1f1f1;
 
 // Branding
-$primary: #253B52;
+// $primary: #253B52;
+$primary: #3E4855;
 
 // Status Colors
 $alert: #D9534F;
