Setting up demo/documentation site for project

--- a/app/styles/ember-fountainhead/base/_utils.scss
+++ b/app/styles/ember-fountainhead/base/_utils.scss
@@ -28,6 +28,13 @@ li[role="presentation"] {
   visibility: visible;;
 }
 
+// Spacing
+// ---------------------------------------------------------------------------
+
+.fh-element {
+  padding: 20px;
+}
+
 // Link Buttons
 // ---------------------------------------------------------------------------
 button.btn-link {
