--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -42,6 +42,10 @@
     white-space: nowrap;
     overflow: hidden;
 
+    &:hover {
+      background-color: $ash;
+    }
+
     &.active {
       background-color: $ash;
     }
