--- a/app/styles/ember-fountainhead/components/_footer.scss
+++ b/app/styles/ember-fountainhead/components/_footer.scss
@@ -2,12 +2,13 @@
 // Addon Footer Styles
 // ========================================================
 
-.fh-addon-footer {
-  background: $primary;
-  padding: 25px 5rem;
-
-  p {
-    color: $white;
-    margin-bottom: 0;
-  }
-}
+// .fh-addon-footer {
+//   // background: $primary;
+//   background: $primary-bg;
+//   padding: 25px 5rem;
+//
+//   p {
+//     color: $primary;
+//     margin-bottom: 0;
+//   }
+// }
