--- a/app/styles/ember-fountainhead/components/class/_class-items-container.scss
+++ b/app/styles/ember-fountainhead/components/class/_class-items-container.scss
@@ -2,6 +2,10 @@
 // Class Items Tabs Container
 // ========================================================
 
+.fh-tabs-container {
+  max-width: 775px;
+}
+
 .fh-index-list {
   list-style: none;
   column-count: 2;
