--- a/app/styles/ember-fountainhead/base/_application.scss
+++ b/app/styles/ember-fountainhead/base/_application.scss
@@ -28,37 +28,44 @@
   z-index: $fh-page-in-page-index;
 }
 
-// Flexbox spell for a sticky footer and full height content container
-.fh-wrapper {
+// Container wrapping the sidebar and content containers
+.fh-container {
   display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-
-  .fh-container {
-    display: flex;
-    flex: 1;
-    margin-left: initial;
-    margin-right: initial;
-  }
-
-  // container is flex, we want the sidebar to keep width and allow main-content
-  // to expand to fill container
-  .fh-sidebar-container { flex: 0; }
-  .fh-main-content { flex: 1; }
-
-  .fh-sidebar-container,
-  .fh-main-content {
-    padding: 0 15px;
-  }
-
-  // Constrain main content. If this doesn't work add useable class names to
-  // subroute components and constrain them
-  .fh-main-content {
-    max-width: 800px;
-  }
+  flex: 1;
+  margin: 0;
 }
 
-// Landing page message
+// fh-container is flex, we want the sidebar to keep width and allow main-content
+// to expand to fill container
+.fh-sidebar-container { flex: 0; }
+.fh-content-container { flex: 1; }
+
+// Constrain the content.
+// TODO: Handle updating to lego padding
+.fh-content {
+  padding: 40px 75px 40px;
+  max-width: 1000px;
+}
+
+// Github Octocat corner SVG
+// ---------------------------------------------------------------------------
+.octocat {
+  color: $white;
+  fill: $primary;
+  height: 62.5px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 62.5px;
+  z-index: $fh-page-in-page-index + 1;
+}
+
+.octocat-arm, .octocat-body {
+  fill: $white;
+}
+
+// Landing Page Message
+// ---------------------------------------------------------------------------
 .fh-landing {
   max-width: 75%;
   margin: 0 auto;
