--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -2,9 +2,9 @@
 // Docs Styles
 // ========================================================
 
-.fh-main-content {
-  // Used for class and module page header
-  .fh-docs-header {
+.fh-content {
+  // Use for page headers
+  .fh-page-header {
     line-height: 1;
     padding-bottom: 10px;
     margin-bottom: 10px;
