--- a/app/styles/ember-fountainhead/components/_header.scss
+++ b/app/styles/ember-fountainhead/components/_header.scss
@@ -2,33 +2,37 @@
 // Addon Header Styles
 // ========================================================
 
-.fh-addon-header {
-  display: flex;
-  background: $primary;
-  color: $white;
-  padding: 0.75rem 5rem;
-  margin-bottom: 50px;
-  justify-content: space-between;
-  align-items: center;
-
-  .logo-home {
-    max-width: 200px;
-  }
-
-  .docs-logo {
-    max-height: 40px;
-  }
-
-  .docs-github-link {
-    color: $white;
-
-    a {
-      color: $white;
-    }
-
-    svg {
-      fill: currentColor;
-      vertical-align: middle;
-    }
-  }
-}
+// .fh-addon-header {
+//   align-items: center;
+//   background: $primary;
+//   color: $white;
+//   display: flex;
+//   height: 62.5px;
+//   justify-content: space-between;
+//   margin-bottom: 50px;
+//   padding: 0.75rem 5rem;
+//
+//   .logo-home {
+//     max-width: 200px;
+//   }
+//
+//   .docs-logo {
+//     max-height: 40px;
+//   }
+//
+//   .octocat {
+//     border: 0;
+//     color: $white;
+//     fill: $primary;
+//     height: 62.5px;
+//     position: fixed;
+//     right: 0;
+//     top: 0;
+//     width: 62.5px;
+//     z-index: $fh-page-in-page-index + 1;
+//   }
+//
+//   .octocat-arm, .octocat-body {
+//     fill: $white;
+//   }
+// }
