--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -3,19 +3,61 @@
 // ========================================================
 
 .fh-sidebar {
-  max-width: 275px;
-  min-height: 475px;
-  margin-left: 50px;
-  border-left: 1px solid $border-color;
-  border-right: 1px solid $border-color;
-  border-top: 1px solid $border-color;
+  width: 375px;
+  min-height: 100vh;
+  background-color: $primary-bg;
+
+  position: relative;
+  height: 100%;
+  padding-bottom: 104px; // Height of made-with div
+
+
+  // Project Logo
+  // ---------------------------------------------------------------------------
+  .project-logo-wrapper {
+    background: $primary;
+    margin-bottom: 4px;
+    border-bottom: 4px solid $primary-bg;
+  }
+
+  .logo-link {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+
+  .project-logo {
+    margin: 0 auto;
+    max-width: 200px;
+  }
+
+  // Made with message at bottom
+  // ---------------------------------------------------------------------------
+  .made-with-wrapper {
+    background: $primary;
+    padding: 30px;
+    width: 100%;
+
+    height: 104px;
+    position: absolute;
+    bottom: 0;
+  }
+
+  .made-with {
+    color: $white;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  // Sidebar contents && groups
+  // ---------------------------------------------------------------------------
 
   .section-header {
-    margin: 0 0 -1px;
-    padding: 12px 12px 10px 12px;
-    border-top: 1px solid $border-color;
-    border-bottom: 1px solid $border-color;
-    text-align: center;
+    background-color: $primary;
+    color: $white;
+    margin-top: 0;
+    margin-bottom: -1px;
+    border-bottom: 1px solid $primary;
     text-transform: uppercase;
     font-size: 14px;
     font-weight: normal;
@@ -25,7 +67,7 @@
   .item-group {
     list-style: none;
     padding: 0;
-    margin: 15px 0;
+    margin: 0;
   }
 
   // sidebar ul li
@@ -36,18 +78,21 @@
 
   // sidebar ul li a
   .item-link {
+    border-bottom: 1px solid $primary;
     display: block;
-    padding: 4px 20px;
+    font-size: 13px;
+    padding: 10px 20px 10px 45px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 
     &:hover {
       background-color: $ash;
+      color: $link-color;
     }
 
     &.active {
-      background-color: $ash;
+      background-color: $white;
     }
 
     &:focus {
