--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,6 +1,17 @@
 <div class="hero">
   <div class="hero-message">
-    <h1>Ember Fountainhead {{fountain-head/shared/fountainhead-svg svgId='document'}}</h1>
+    <h1>
+      Ember Fountainhead
+      <svg class="document-logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="32" viewBox="0 0 24 32">
+      <path class="outline" d="M16,1.82,22.39,9H16.5c-.22,0-.5-.42-.5-.75Z"/>
+      <path class="outline" d="M24,9.45a.48.48,0,0,0,0-.07.49.49,0,0,0-.09-.19v0l-8-9h0A.49.49,0,0,0,15.64,0h-.06L15.5,0H1.5A1.5,1.5,0,0,0,0,1.5v29A1.5,1.5,0,0,0,1.5,32h21A1.5,1.5,0,0,0,24,30.5V9.5S24,9.47,24,9.45Zm-1,21a.5.5,0,0,1-.5.5H1.5a.5.5,0,0,1-.5-.5V1.5A.5.5,0,0,1,1.5,1H15V8.25A1.73,1.73,0,0,0,16.5,10H23Z"/>
+      <path class="line-a" d="M5.5,14h13a.5.5,0,0,0,0-1H5.5a.5.5,0,0,0,0,1Z"/>
+      <path class="line-b" d="M5.5,18h13a.5.5,0,0,0,0-1H5.5a.5.5,0,0,0,0,1Z"/>
+      <path class="line-c" d="M5.5,10h6a.5.5,0,0,0,0-1h-6a.5.5,0,0,0,0,1Z"/>
+      <path class="line-d" d="M5.5,22h13a.5.5,0,0,0,0-1H5.5a.5.5,0,0,0,0,1Z"/>
+      <path class="line-e" d="M5.5,26h13a.5.5,0,0,0,0-1H5.5a.5.5,0,0,0,0,1Z"/>
+      </svg>
+    </h1>
     <span class="italic">Create beautiful, dynamic documentation.</span>
   </div>
 </div>
