Making demo app landing page even prettier :rainbow:

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -20,3 +20,4 @@ p { max-width: 750px; }
 .wrapper, .element { padding: 10px; }
 .italic { font-style: italic; }
 .uppercase { text-transform: uppercase; }
+.text-left { text-align: left; }
