--- a/app/styles/ember-fountainhead/base/_typography.scss
+++ b/app/styles/ember-fountainhead/base/_typography.scss
@@ -87,7 +87,7 @@
   .bold { font-weight: bold; }
   .normal { font-weight: normal; }
 
-  .align-right { text-align: right; }
-  .align-center { text-align: center; }
-  .align-left { text-align: left; }
+  .text-right { text-align: right; }
+  .text-center { text-align: center; }
+  .text-left { text-align: left; }
 }
