--- a/tests/dummy/app/styles/_landing.scss
+++ b/tests/dummy/app/styles/_landing.scss
@@ -4,7 +4,7 @@
 
 .hero {
   background-color: #50676B;
-  color: white;
+  color: #E6E6E6;
   display: flex;
   width: 100%;
   height: 100vh;
@@ -16,17 +16,18 @@
   width: 100%;
 
   h1 {
+    display: inline-block;
     font-size: 60px;
   }
 }
 
 // Page logo styles
 .document-logo {
-  width: 55px;
-  height: 55px;
+  width: 120px;
+  height: 120px;
 
   .outline {
-    fill: white;
+    fill: #E6E6E6;
   }
 
   .line-a { fill: #ffcc95; }
