Don't forget about the styles

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -4,7 +4,7 @@
 
 // Ember Radical Styles Set Base Line
 // ---------------------------------------------------------------------------
-@import 'ember-radical/styles';
+@import 'ember-radical';
 
 // Import Fountainhead styles directly for live reload in dev
 // ---------------------------------------------------------------------------
