--- a/app/styles/ember-fountainhead/fonts/_source-code-pro.scss
+++ b/app/styles/ember-fountainhead/fonts/_source-code-pro.scss
@@ -1,4 +1,4 @@
 // ========================================================
 // Optional Source Code Pro Import
 // ========================================================
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+// @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
