--- a/app/styles/ember-fountainhead/fonts/_libre-franklin.scss
+++ b/app/styles/ember-fountainhead/fonts/_libre-franklin.scss
@@ -1,4 +1,4 @@
 // ========================================================
 // Optional Libre Franklin Import
 // ========================================================
-// @import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
