--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -4,11 +4,11 @@
 
 // Ember Radical Styles Set Base Line
 // ---------------------------------------------------------------------------
-// @import 'ember-radical/styles';
+@import 'ember-radical/styles';
 
 // Import Fountainhead styles directly for live reload in dev
 // ---------------------------------------------------------------------------
-@import 'ember-fountainhead';
+// @import 'ember-fountainhead';
 
 // Github Documentation Site Styles
 // ---------------------------------------------------------------------------
