Still support fountainhead styles in dummy app just not in the weird way

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -8,7 +8,8 @@
 
 // Import Fountainhead styles directly for live reload in dev
 // ---------------------------------------------------------------------------
-// @import 'ember-fountainhead';
+// @import 'ember-fountainhead'; // @TODO: Figure out how to do this so that it
+// is not a garbage fire
 
 // Github Documentation Site Styles
 // ---------------------------------------------------------------------------
