Maybe change CSS naming conflict

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -8,8 +8,7 @@
 
 // Import Fountainhead styles directly for live reload in dev
 // ---------------------------------------------------------------------------
-// @import 'ember-fountainhead'; // @TODO: Figure out how to do this so that it
-// is not a garbage fire
+@import 'ember-fountainhead';
 
 // Github Documentation Site Styles
 // ---------------------------------------------------------------------------
