Bring back variable declarations

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -4,7 +4,7 @@
 
 // Base Setup
 // ---------------------------------------------------------------------------
-// @import 'ember-fountainhead/themes/simple';
+@import 'ember-fountainhead/themes/simple';
 // @import 'ember-fountainhead/base/utils';
 
 // Base Styles
