Bring back type

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -10,7 +10,7 @@
 // Base Styles
 // ---------------------------------------------------------------------------
 // @import 'ember-fountainhead/base/application';
-// @import 'ember-fountainhead/base/typography';
+@import 'ember-fountainhead/base/typography';
 // @import 'ember-fountainhead/base/code-blocks';
 
 // Radical Styles
