--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -5,11 +5,11 @@
 // Base Setup
 // ---------------------------------------------------------------------------
 @import 'ember-fountainhead/themes/simple';
-// @import 'ember-fountainhead/base/utils';
+@import 'ember-fountainhead/base/utils';
 
 // Base Styles
 // ---------------------------------------------------------------------------
-// @import 'ember-fountainhead/base/application';
+@import 'ember-fountainhead/base/application';
 @import 'ember-fountainhead/base/typography';
 @import 'ember-fountainhead/base/code-blocks';
 
