--- a/app/styles/ember-fountainhead/base/_application.scss
+++ b/app/styles/ember-fountainhead/base/_application.scss
@@ -57,7 +57,7 @@
   right: 0;
   top: 0;
   width: 62.5px;
-  z-index: $fh-page-in-page-index + 1;
+  // z-index: $fh-page-in-page-index + 1;
 }
 
 .octocat-arm, .octocat-body {
