How about sidebar?

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -22,7 +22,7 @@
 // ---------------------------------------------------------------------------
 @import 'ember-fountainhead/components/header';
 @import 'ember-fountainhead/components/footer';
-@import 'ember-fountainhead/components/sidebar';
+// @import 'ember-fountainhead/components/sidebar';
 
 // Doc/Module/Class Page
 @import 'ember-fountainhead/components/docs';
