--- a/app/styles/ember-fountainhead/themes/_simple.scss
+++ b/app/styles/ember-fountainhead/themes/_simple.scss
@@ -43,7 +43,8 @@ $smoke: #f1f1f1 !default;
 
 // Branding
 // $primary: #253B52 !default;
-$primary: #3E4855 !default; // rgb(62,72,85)
+$primary: #3E4855 !default;
+// primary rgb(62,72,85)
 $primary-bg: rgba(62, 72, 85, 0.3) !default;
 // $primary: #6B8C92 !default;
 // $primary: #50676B !default;
