Comment out svg fills

--- a/app/styles/ember-fountainhead/base/_application.scss
+++ b/app/styles/ember-fountainhead/base/_application.scss
@@ -51,7 +51,7 @@
 // ---------------------------------------------------------------------------
 .octocat {
   color: $white;
-  fill: $primary;
+  // fill: $primary;
   height: 62.5px;
   position: fixed;
   right: 0;
@@ -61,7 +61,7 @@
 }
 
 .octocat-arm, .octocat-body {
-  fill: $white;
+  // fill: $white;
 }
 
 // Landing Page Message
