--- a/app/styles/ember-fountainhead/ember-radical/_svg.scss
+++ b/app/styles/ember-fountainhead/ember-radical/_svg.scss
@@ -8,5 +8,5 @@
   display: inline;
   position: relative;
   bottom: -0.15em; // svg baseline is a bit high
-  fill: currentColor;
+  // fill: currentColor;
 }
