--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// Docs Styles
+// Docs Page Styles
 // ========================================================
 
 .fh-content {
