--- a/app/styles/ember-fountainhead/components/_modules.scss
+++ b/app/styles/ember-fountainhead/components/_modules.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// Modules Styles
+// Modules Page Styles
 // ========================================================
 
 .fh-module-category {
