--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// Sidebar
+// Fountainhead Sidebar
 // ========================================================
 
 .fh-sidebar {
