Bring back those font imports

--- a/app/styles/ember-fountainhead/themes/_simple.scss
+++ b/app/styles/ember-fountainhead/themes/_simple.scss
@@ -12,8 +12,8 @@ $radius: 3px !default;
 
 // Typography
 // -----------------------------------------------------------------------------
-// @import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
-// @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
 $base-font-size: 14 !default;
 $font-family: 'Libre Franklin', Arial, sans-serif !default;
