See if Travis is ok with this font import

--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -2,6 +2,9 @@
 // Fountainhead Application Styles
 // ========================================================
 
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
 // Base Setup
 // ---------------------------------------------------------------------------
 @import 'ember-fountainhead/themes/simple';
