Pulling Radical styles BACK in to demo compile styles

--- a/app/styles/ember-fountainhead/base/_application.scss
+++ b/app/styles/ember-fountainhead/base/_application.scss
@@ -47,6 +47,13 @@
   max-width: 1000px;
 }
 
+// Lego style whitespace rules
+// ---------------------------------------------------------------------------
+.fh-wrapper,
+.fh-element {
+  padding: 10px;
+}
+
 // Github Octocat corner SVG
 // ---------------------------------------------------------------------------
 .octocat {
