--- a/tests/dummy/app/styles/_ember-radical.scss
+++ b/tests/dummy/app/styles/_ember-radical.scss
@@ -1296,6 +1296,12 @@ small,
   font-weight: normal;
   color: #464a4c; }
 
+.italic {
+  font-style: italic; }
+
+.uppercase {
+  text-transform: uppercase; }
+
 .text-left {
   text-align: left; }
 
