Making that home page look legit :boom:

--- a/app/styles/ember-fountainhead/base/_typography.scss
+++ b/app/styles/ember-fountainhead/base/_typography.scss
@@ -85,6 +85,10 @@
   .bold { font-weight: bold; }
   .normal { font-weight: normal; }
 
+  .mono {
+    font-family: $font-family-mono;
+  }
+
   .text-right { text-align: right; }
   .text-center { text-align: center; }
   .text-left { text-align: left; }
