--- a/tests/dummy/app/styles/_landing.scss
+++ b/tests/dummy/app/styles/_landing.scss
@@ -7,24 +7,57 @@
   color: #E6E6E6;
   display: flex;
   width: 100%;
-  height: 100vh;
+  padding: 100px;
 }
 
-.hero-message {
-  align-self: center;
-  text-align: center;
-  width: 100%;
+.hero-wrapper {
+  margin: 0 auto;
+  position: relative;
+  display: inline-block;
+}
 
+.logo,
+.message {
+  display: inline-block;
+}
+
+.logo {
+  float: left;
+  position: relative;
+  top: 12px;
+}
+
+.message {
   h1 {
     display: inline-block;
-    font-size: 60px;
+    font-size: 70px;
+    margin-bottom: 0;
   }
 }
 
-// Page logo styles
+.home-shortcuts {
+  margin-top: 35px;
+}
+
+.hero-link {
+  color: $white;
+  font-size: 18px;
+  padding: 7px 24px;
+  border: 2px solid $white;
+  margin: 10px 5px;
+  border-radius: 4px;
+
+  &:hover {
+    color: $white;
+    text-decoration: none;
+  }
+}
+
+// Logo
+// ---------------------------------------------------------------------------
 .document-logo {
-  width: 120px;
-  height: 120px;
+  width: 140px;
+  height: 140px;
 
   .outline {
     fill: #E6E6E6;
@@ -35,4 +68,25 @@
   .line-c { fill: #7cfce9; }
   .line-d { fill: #6FC1FF; }
   .line-e { fill: #B084EB; }
+}
+
+// Show case divs
+// ---------------------------------------------------------------------------
+.landing-elements-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.fh-element.showcase {
+  display: flex;
+  padding-bottom: 40px;
+  border-bottom: 1px solid $border-color;;
+  margin: 40px 0;
+}
+
+.feature-logo {
+  img {
+    width: 75px;
+    height: 75px;
+  }
 }
